bk_ida/gccida/c2/emit_conditional_move
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4133:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4136:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode cmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4139:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4144:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v13; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4151:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4152:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4153:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v22; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4165:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v35; // [rsp+1Ch] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4255:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[v36].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4257:34: error: use of undeclared identifier 'machine_mode'
if ( !operand->predicate( v26, ( machine_mode)*( ( unsigned __int16 *)operand + 8)) ) 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4258:20: error: use of undeclared identifier 'machine_mode'
x = gen_reg_rtx( ( machine_mode)*( ( unsigned __int16 *)operand + 8)); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4259:36: error: use of undeclared identifier 'machine_mode'
if ( !operand[2].predicate( v27, ( machine_mode)*( ( unsigned __int16 *)&operand[2] + 8)) ) 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4260:21: error: use of undeclared identifier 'machine_mode'
copy_to_mode_reg( ( machine_mode)*( ( unsigned __int16 *)&operand[2] + 8), v27); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4261:36: error: use of undeclared identifier 'machine_mode'
if ( !operand[3].predicate( v28, ( machine_mode)*( ( unsigned __int16 *)&operand[3] + 8)) ) 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4262:21: error: use of undeclared identifier 'machine_mode'
copy_to_mode_reg( ( machine_mode)*( ( unsigned __int16 *)&operand[3] + 8), v28); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4268:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v31 = insn_data_0[( int)v36].genfun( x, v30); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/optabs.c:4268:36: error: called object type '<dependent type>' is not a function or function pointer
v31 = insn_data_0[( int)v36].genfun( x, v30); 
                                   ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/emit_conditional_move/src/obj/optabs.o] Error 1
